# pyskyfire

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  changelog.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: changelog.doctree  getting-started.doctree  index.doctree  usage.doctree
.doctrees/api/: index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/explanations/: capabilities.doctree  index.doctree  package-structure.doctree  regenerative-cooling-explanation.doctree  regenerative-heat-transfer.doctree
.doctrees/howto/: engine-optimization.doctree  index.doctree  making-validation-case.doctree  mixture-ratio-optimisation.doctree
.doctrees/tutorials/: advanced-simulation.doctree  index.doctree  minimal-simulation.doctree
.github/workflows/: docs.yml
_sources/: changelog.md  getting-started.md  index.md  usage.md
_sources/api/: index.md.txt
_sources/explanations/: capabilities.md  index.md  package-structure.md  regenerative-heat-transfer.md  regenerative-heat-transfer.md.txt
_sources/howto/: engine-optimization.md  making-validation-case.md.txt  mixture-ratio-optimisation.md.txt
_sources/tutorials/: advanced-simulation.md.txt  index.md  minimal-simulation.md  minimal-simulation.md.txt
_static/: custom.css
api/: index.html
autoapi/: index.html
autoapi/pyskyfire/: index.html
cea_files/: Dan_CEA2  fcea2
docs/: conf.py  getting-started.md  index.md
docs/_static/: custom.css  napoleon_tweaks.css
docs/api/: index.md  index.rst  smoke.md
docs/autoapi/: index.rst
docs/explanations/: capabilities.md  package-structure.md  (+2 more)
explanations/: capabilities.html  index.html  package-structure.html  regenerative-cooling-explanation.html  regenerative-heat-transfer.html
howto/: engine-optimization.html  index.html  making-validation-case.html  mixture-ratio-optimisation.html
tutorials/: advanced-simulation.html  index.html  minimal-simulation.html
validation/: trajectory_calculations.py
(+717 files in other folders)
